--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ruby-changelog-formatter",
   "version": "0.0.1",
   "description": "for nishitaniyuki gp",
-  "main": "index.js",
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1"
@@ -17,7 +16,7 @@
     "eslint-plugin-import": "^2.0.0"
   },
   "scripts": {
-    "start": "babel-node index.js"
+    "parse": "babel-node parse-to-text.js"
   },
   "author": "nishitani",
   "license": "MIT"
